# tnsutil

./: .gitignore  CMakeLists.txt  LICENSE  README  VERSION  configure.bat  configure.sh  tns_schema.ldif
cmake/: CMakeLists.txt
cmake/modules/: FindBoost.cmake  FindORACLE.cmake  Utilities.cmake
src/: CMakeLists.txt  bak.cpp  bak.h  env.cpp  env.h  exp.h  ldap2tns.cpp  ldap2tns.h  ldif2tns.cpp  ldif2tns.h  ldp.cpp  ldp.h  opt.cpp  opt.h  ora.cpp  ora.h  tns.cpp  tns.h  tns2ldap.cpp  tns2ldap.h  tns2ldif.cpp  tns2ldif.h  tnsformat.cpp  tnsformat.h  uri.cpp  uri.h  utl.cpp  utl.h  ver.cpp  ver.h  ver.h.in
